# Croco-Sushi

./: .dockerignore  .env  .gitattributes  .gitignore  Caddyfile  DEPENDENCIES.md  DEPLOYMENT.md  DOCKER_TROUBLESHOOTING.md  IMPLEMENTATION_PLAN_REVIEW.md  NGINX_SETUP.md  PROJECT_ANALYSIS.md  README.md  SERVER_REQUIREMENTS.md  TZ_CROCO_SUSHI.md  TZ_DESIGN_THEMES.md  TZ_POKRASHCHENNYA.md  TZ_TESTING_AND_ADMIN.md  alembic.ini  create_admin.py  docker-compose.nginx.yml  docker-compose.prod.yml  docker-compose.yml  env.example  main.py  production.env  pyproject.toml  reset_db.bat  update_types.py
alembic/: env.py
alembic/versions/: 2025_11_23_1910-ca724174a33c_test.py  2025_11_30_1851-47e397629a88_add_role_to_users.py
backend/: .coverage  .dockerignore  .env  Dockerfile  SETUP.md  add_categories.py  add_products.py  add_uploaded_products.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  check_admins.py  check_products.py  check_users.py  create_admin.py  create_manager.py  fix_address_schema.py  fix_db_version.py  fix_image_urls.py  pytest.ini  reset_admin_password.py  reset_password.py  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  2025_12_07_1654-5434fc15ad82_create_cart_tables.py  2025_12_07_2225-aea350d982be_add_promo_code_to_orders.py  2025_12_07_2253-b69a10971e2a_add_newsletter_subscribers.py  2025_12_10_2254-894ac232cabe_add_product_badges.py  2025_12_11_2145-7efedca491c7_add_manager_role.py  2025_12_11_2227-f8b4a9bb14e0_add_order_history.py  2025_12_12_0026-f435a5e034a6_add_manager_id_to_order_history.py  2025_12_29_2307-14f5860962b3_add_show_discount_badge_to_promotions.py  2026_01_01_2200-b85d8d7ccb4a_add_callback_table.py  2026_01_18_1717-7806fe1744b1_add_foreign_key_to_promo_codes_product_.py
backend/app/: celery_app.py  database.py  main.py
backend/app/core/: cache.py  config.py  dependencies.py  email.py  exceptions.py  metrics.py  redis.py  security.py  sms.py  static.py  utils.py
backend/app/db/: add_more_products.py  add_products.py  debug_products.py  seed.py
backend/app/models/: __init__.py  address.py  audit_log.py  callback.py  cart.py  category.py  delivery_zone.py  favorite.py  newsletter.py  order.py  order_history.py  product.py  product_size.py  promo_code.py  promotion.py  review.py  setting.py  user.py
backend/app/schemas/: address.py  callback.py  cart.py  category.py  favorite.py  newsletter.py  order.py  product.py  product_size.py  promotion.py  review.py  user.py
backend/scripts/: convert_internal.py  fix_constraint.py  resize_images.py  test_email.py
backend/tests/: __init__.py  conftest.py  test_models.py  test_static_caching.py  test_utils.py
croco_sushi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.production.example  Dockerfile  README.md  build_log_2.txt  build_log_3.txt  jest.config.js  middleware.ts  next.config.js  optimize_images.py  package-lock.json  package.json  tailwind.config.ts
frontend/__tests__/: cartStoreRepro.test.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx  sitemap.ts  template.tsx
frontend/components/: AppFooter.tsx  AppHeader.tsx  CallbackModal.tsx  Cart.tsx  CartUpsell.tsx  Categories.tsx  CategoryFeed.tsx  CategoryNav.tsx  CategorySection.tsx  CategorySlider.tsx  CheckoutUpsell.tsx  CountdownTimer.tsx  Footer.tsx  Header.tsx  Hero.tsx  MaintenanceGuard.tsx  MaintenanceOverlay.tsx  NonWorkingHoursPopup.tsx  ParallaxBackground.tsx  PatternBackground.tsx  PlerdyScript.tsx  PopularProducts.tsx  ProductActions.tsx  ProductCard.tsx  PromoBanner.tsx  Promotions.tsx  QuickViewModal.tsx  ReviewForm.tsx  ReviewsCarousel.tsx  Stories.tsx  ThemeToggle.tsx
frontend/hooks/: useCartSync.tsx  useOrderStatus.ts  useWorkingHours.ts
frontend/lib/: schema.tsx  utils.ts
frontend/locales/: index.ts  ru.json  ua.json
frontend/public/: manifest.json  robots.txt
frontend/scripts/: check_icons.py  create_favicon.py  reoptimize_hero.py  update_logo_final.py  update_logo_v3.py
frontend/store/: cartStore.ts  localeStore.ts  themeStore.ts  uiStore.ts
frontend/tests/: example.spec.ts
monitoring/prometheus/: prometheus.yml
nginx-config/: nginx.conf
nginx-config/conf.d/: app.conf  default.conf
nginx-config/ssl/: .gitkeep
postgres-init/: 01-fix-pg-hba.sh  pg_hba_local.conf
scripts/: backup.sh  cleanup_images.py  convert_backend_images.py  convert_images.py  deploy.sh  download_images.py  resize_assets.py  restore_images.py  ssl-setup.sh  test_invalid_hidden.json  test_invalid_raster.json  test_valid.json  validate_lottie.py
(+133 files in other folders)
